force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/Customer_Potential_Study_Product__c.object-meta.xml
<CustomObject>
    <label>Customer Potential Study - Product</label>
    <nameField>
        <label>Product</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Potential Study - Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>