force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Avg_Life__c.field-meta.xml
<CustomField>
    <fullName>Avg_Life__c</fullName>
    <label>Avg Life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>