force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Brand_Currently_Used__c.field-meta.xml
<CustomField>
    <fullName>Brand_Currently_Used__c</fullName>
    <label>Brand Currently Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>