force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Brand_Proposed__c.field-meta.xml
<CustomField>
    <fullName>Brand_Proposed__c</fullName>
    <label>Brand Proposed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>