force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Customer_perception_Life_Performance__c.field-meta.xml
<CustomField>
    <fullName>Customer_perception_Life_Performance__c</fullName>
    <label>Customer perception -Life/Performance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Satisfied</fullName>
            </value>
            <value>
                <fullName>Unsatisfied</fullName>
            </value>
            <value>
                <fullName>Improvement Expected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>