force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Customer_Potential_Study__c.field-meta.xml
<CustomField>
    <fullName>Customer_Potential_Study__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Potential Study</label>
    <referenceTo>Customer_Potential_Study__c</referenceTo>
    <relationshipLabel>Customer Potential Study - Products</relationshipLabel>
    <relationshipName>Customer_Potential_Study_Products</relationshipName>
    <type>Lookup</type>
</CustomField>