force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Estimated_Share__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Share__c</fullName>
    <label>Estimated Share %</label>
    <length>255</length>
    <type>Text</type>
</CustomField>