force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Purchase_Source__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Source__c</fullName>
    <label>Purchase Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>