force-app/force-app/force-app/main/default/objects/Customer_Potential_Study_Product__c/fields/Remarks_If_Any__c.field-meta.xml
<CustomField>
    <fullName>Remarks_If_Any__c</fullName>
    <label>Remarks - If Any</label>
    <length>255</length>
    <type>Text</type>
</CustomField>